--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         />
       </video>
     </section>
-    <sectionec class="audio">
+    <section class="audio">
       <h1>Aprendiendo a utilizar audios</h1>
       <audio controls autoplay loop>
         <source
@@ -31,6 +31,6 @@
           type="audio/mp3"
         />
       </audio>
-    </sectionec>
+    </section>
   </body>
 </html>
